		* Antlr3.Runtime.dll is required
		* the syntax foo.bar.baz.elements or foo.bar.baz.indices is not longer supported.  Use the alternative syntax of elements(foo.bar.baz) or indices(foo.bar.baz) instead
			Note: in some case, where a sub-select is needed, the collection is enough example: FROM m IN CLASS Master WHERE NOT EXISTS( FROM m.Details d WHERE NOT d.I=5 )

	##### Possible Breaking Changes for external frameworks #####
		* ISession interface has additional methods
		* IStatelessSession interface has additional methods
		* DefaultProxyFactoryFactory removed
		* IProxyFactoryFactory now provide the IProxyValidator implementation

	##### Initialization time #####
		* The ProxyValidator check for "internal virtual" (to be intercepted by proxy need "protected internal virtual")
		* The session-factory configuration property "proxyfactory.factory_class" is mandatory; You must choose one of the availables NHibernate.ByteCode

	##### Breaking Changes #####
		* see NH-1633 if you are using SQL native queries
		* CriteriaUtil is gone. NHibernate.Transform.Transformers now returns predefined IResultTransformer.
		* Now filters are working even with many-to-one association for Criteria and HQL (NH-1293, NH-1179)
		* ISessionFactory.Settings is gone (moved to ISessionFactoryImplementor.Settings)
		
Build 2.1.0.Alpha2 (rev4167)
========================

** Sub-task
    * [NH-1688] - System.Boolean type incorrectly mapped to YesNoType when the criterion is created by using a projection instead of a property name

** Bug
    * [NH-1635] - <many-to-one formula="select id from..."> should not require a column
    * [NH-1671] - SoftLimitMRUCache has a softReferenceCache which is NOT soft
    * [NH-1693] -  Wrong parameters order in query with subselect and filter
    * [NH-1694] - SQL2005Dialect - Sorting fails on a Formula property containing a comma while using paging (MaxResults)